Fix appearance of buttons and remove background color from code blocks

--- a/viewer/src/md.css
+++ b/viewer/src/md.css
@@ -293,6 +293,7 @@
 .markdown-body [type=reset],
 .markdown-body [type=submit] {
     -webkit-appearance: button;
+    appearance: button;
 }
 
 .markdown-body [type=checkbox],
@@ -910,12 +911,10 @@
 
 .markdown-body .highlight pre,
 .markdown-body pre {
-    padding: 16px;
     overflow: auto;
     font-size: 85%;
     line-height: 1.45;
     color: var(--color-fg-default);
-    background-color: var(--color-canvas-subtle);
     border-radius: 6px;
 }
 
