--- a/viewer/src/md.css
+++ b/viewer/src/md.css
@@ -1,7 +1,6 @@
 @media (prefers-color-scheme: dark) {
-
     .markdown-body,
-    [data-theme="dark"] {
+    [data-theme='dark'] {
         /*dark*/
         color-scheme: dark;
         --color-prettylights-syntax-comment: #8b949e;
@@ -52,9 +51,8 @@
 }
 
 @media (prefers-color-scheme: light) {
-
     .markdown-body,
-    [data-theme="light"] {
+    [data-theme='light'] {
         /*light*/
         color-scheme: light;
         --color-prettylights-syntax-comment: #6e7781;
@@ -87,7 +85,7 @@
         --color-prettylights-syntax-brackethighlighter-angle: #57606a;
         --color-prettylights-syntax-sublimelinter-gutter-mark: #8c959f;
         --color-prettylights-syntax-constant-other-reference-link: #0a3069;
-        --color-fg-default: #1F2328;
+        --color-fg-default: #1f2328;
         --color-fg-muted: #656d76;
         --color-fg-subtle: #6e7781;
         --color-canvas-default: #ffffff;
@@ -131,7 +129,7 @@
         --color-prettylights-syntax-brackethighlighter-angle: #57606a;
         --color-prettylights-syntax-sublimelinter-gutter-mark: #8c959f;
         --color-prettylights-syntax-constant-other-reference-link: #0a3069;
-        --color-fg-default: #1F2328;
+        --color-fg-default: #1f2328;
         --color-fg-muted: #656d76;
         --color-fg-subtle: #6e7781;
         --color-canvas-default: #ffffff;
@@ -154,7 +152,8 @@
     margin: 0;
     color: var(--color-fg-default);
     background-color: var(--color-canvas-default);
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans', Helvetica, Arial, sans-serif,
+        'Apple Color Emoji', 'Segoe UI Emoji';
     font-size: 16px;
     line-height: 1.5;
     word-wrap: break-word;
@@ -217,9 +216,9 @@
 }
 
 .markdown-body h1 {
-    margin: .67em 0;
+    margin: 0.67em 0;
     font-weight: var(--base-text-weight-semibold, 600);
-    padding-bottom: .3em;
+    padding-bottom: 0.3em;
     font-size: 2em;
     border-bottom: 1px solid var(--color-border-muted);
 }
@@ -273,7 +272,7 @@
     overflow: hidden;
     background: transparent;
     border-bottom: 1px solid var(--color-border-muted);
-    height: .25em;
+    height: 0.25em;
     padding: 0;
     margin: 24px 0;
     background-color: var(--color-border-default);
@@ -289,32 +288,32 @@
     line-height: inherit;
 }
 
-.markdown-body [type=button],
-.markdown-body [type=reset],
-.markdown-body [type=submit] {
+.markdown-body [type='button'],
+.markdown-body [type='reset'],
+.markdown-body [type='submit'] {
     -webkit-appearance: button;
     appearance: button;
 }
 
-.markdown-body [type=checkbox],
-.markdown-body [type=radio] {
+.markdown-body [type='checkbox'],
+.markdown-body [type='radio'] {
     box-sizing: border-box;
     padding: 0;
 }
 
-.markdown-body [type=number]::-webkit-inner-spin-button,
-.markdown-body [type=number]::-webkit-outer-spin-button {
+.markdown-body [type='number']::-webkit-inner-spin-button,
+.markdown-body [type='number']::-webkit-outer-spin-button {
     height: auto;
 }
 
-.markdown-body [type=search]::-webkit-search-cancel-button,
-.markdown-body [type=search]::-webkit-search-decoration {
+.markdown-body [type='search']::-webkit-search-cancel-button,
+.markdown-body [type='search']::-webkit-search-decoration {
     -webkit-appearance: none;
 }
 
 .markdown-body ::-webkit-input-placeholder {
     color: inherit;
-    opacity: .54;
+    opacity: 0.54;
 }
 
 .markdown-body ::-webkit-file-upload-button {
@@ -333,13 +332,13 @@
 
 .markdown-body hr::before {
     display: table;
-    content: "";
+    content: '';
 }
 
 .markdown-body hr::after {
     display: table;
     clear: both;
-    content: "";
+    content: '';
 }
 
 .markdown-body table {
@@ -360,30 +359,30 @@
     cursor: pointer;
 }
 
-.markdown-body details:not([open])>*:not(summary) {
+.markdown-body details:not([open]) > *:not(summary) {
     display: none !important;
 }
 
 .markdown-body a:focus,
-.markdown-body [role=button]:focus,
-.markdown-body input[type=radio]:focus,
-.markdown-body input[type=checkbox]:focus {
+.markdown-body [role='button']:focus,
+.markdown-body input[type='radio']:focus,
+.markdown-body input[type='checkbox']:focus {
     outline: 2px solid var(--color-accent-fg);
     outline-offset: -2px;
     box-shadow: none;
 }
 
 .markdown-body a:focus:not(:focus-visible),
-.markdown-body [role=button]:focus:not(:focus-visible),
-.markdown-body input[type=radio]:focus:not(:focus-visible),
-.markdown-body input[type=checkbox]:focus:not(:focus-visible) {
+.markdown-body [role='button']:focus:not(:focus-visible),
+.markdown-body input[type='radio']:focus:not(:focus-visible),
+.markdown-body input[type='checkbox']:focus:not(:focus-visible) {
     outline: solid 1px transparent;
 }
 
 .markdown-body a:focus-visible,
-.markdown-body [role=button]:focus-visible,
-.markdown-body input[type=radio]:focus-visible,
-.markdown-body input[type=checkbox]:focus-visible {
+.markdown-body [role='button']:focus-visible,
+.markdown-body input[type='radio']:focus-visible,
+.markdown-body input[type='checkbox']:focus-visible {
     outline: 2px solid var(--color-accent-fg);
     outline-offset: -2px;
     box-shadow: none;
@@ -391,17 +390,24 @@
 
 .markdown-body a:not([class]):focus,
 .markdown-body a:not([class]):focus-visible,
-.markdown-body input[type=radio]:focus,
-.markdown-body input[type=radio]:focus-visible,
-.markdown-body input[type=checkbox]:focus,
-.markdown-body input[type=checkbox]:focus-visible {
+.markdown-body input[type='radio']:focus,
+.markdown-body input[type='radio']:focus-visible,
+.markdown-body input[type='checkbox']:focus,
+.markdown-body input[type='checkbox']:focus-visible {
     outline-offset: 0;
 }
 
 .markdown-body kbd {
     display: inline-block;
     padding: 3px 5px;
-    font: 11px ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
+    font:
+        11px ui-monospace,
+        SFMono-Regular,
+        SF Mono,
+        Menlo,
+        Consolas,
+        Liberation Mono,
+        monospace;
     line-height: 10px;
     color: var(--color-fg-default);
     vertical-align: middle;
@@ -426,7 +432,7 @@
 
 .markdown-body h2 {
     font-weight: var(--base-text-weight-semibold, 600);
-    padding-bottom: .3em;
+    padding-bottom: 0.3em;
     font-size: 1.5em;
     border-bottom: 1px solid var(--color-border-muted);
 }
@@ -443,12 +449,12 @@
 
 .markdown-body h5 {
     font-weight: var(--base-text-weight-semibold, 600);
-    font-size: .875em;
+    font-size: 0.875em;
 }
 
 .markdown-body h6 {
     font-weight: var(--base-text-weight-semibold, 600);
-    font-size: .85em;
+    font-size: 0.85em;
     color: var(--color-fg-muted);
 }
 
@@ -461,7 +467,7 @@
     margin: 0;
     padding: 0 1em;
     color: var(--color-fg-muted);
-    border-left: .25em solid var(--color-border-default);
+    border-left: 0.25em solid var(--color-border-default);
 }
 
 .markdown-body ul,
@@ -490,14 +496,28 @@
 .markdown-body tt,
 .markdown-body code,
 .markdown-body samp {
-    font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
+    font-family:
+        ui-monospace,
+        SFMono-Regular,
+        SF Mono,
+        Menlo,
+        Consolas,
+        Liberation Mono,
+        monospace;
     font-size: 12px;
 }
 
 .markdown-body pre {
     margin-top: 0;
     margin-bottom: 0;
-    font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
+    font-family:
+        ui-monospace,
+        SFMono-Regular,
+        SF Mono,
+        Menlo,
+        Consolas,
+        Liberation Mono,
+        monospace;
     font-size: 12px;
     word-wrap: normal;
 }
@@ -546,20 +566,20 @@
 
 .markdown-body::before {
     display: table;
-    content: "";
+    content: '';
 }
 
 .markdown-body::after {
     display: table;
     clear: both;
-    content: "";
+    content: '';
 }
 
-.markdown-body>*:first-child {
+.markdown-body > *:first-child {
     margin-top: 0 !important;
 }
 
-.markdown-body>*:last-child {
+.markdown-body > *:last-child {
     margin-bottom: 0 !important;
 }
 
@@ -595,11 +615,11 @@
     margin-bottom: 16px;
 }
 
-.markdown-body blockquote>:first-child {
+.markdown-body blockquote > :first-child {
     margin-top: 0;
 }
 
-.markdown-body blockquote>:last-child {
+.markdown-body blockquote > :last-child {
     margin-bottom: 0;
 }
 
@@ -644,7 +664,7 @@
 .markdown-body h5 code,
 .markdown-body h6 tt,
 .markdown-body h6 code {
-    padding: 0 .2em;
+    padding: 0 0.2em;
     font-size: inherit;
 }
 
@@ -678,27 +698,27 @@
     list-style-type: none;
 }
 
-.markdown-body ol[type="a s"] {
+.markdown-body ol[type='a s'] {
     list-style-type: lower-alpha;
 }
 
-.markdown-body ol[type="A s"] {
+.markdown-body ol[type='A s'] {
     list-style-type: upper-alpha;
 }
 
-.markdown-body ol[type="i s"] {
+.markdown-body ol[type='i s'] {
     list-style-type: lower-roman;
 }
 
-.markdown-body ol[type="I s"] {
+.markdown-body ol[type='I s'] {
     list-style-type: upper-roman;
 }
 
-.markdown-body ol[type="1"] {
+.markdown-body ol[type='1'] {
     list-style-type: decimal;
 }
 
-.markdown-body div>ol:not([type]) {
+.markdown-body div > ol:not([type]) {
     list-style-type: decimal;
 }
 
@@ -710,12 +730,12 @@
     margin-bottom: 0;
 }
 
-.markdown-body li>p {
+.markdown-body li > p {
     margin-top: 16px;
 }
 
-.markdown-body li+li {
-    margin-top: .25em;
+.markdown-body li + li {
+    margin-top: 0.25em;
 }
 
 .markdown-body dl {
@@ -745,7 +765,7 @@
     border: 1px solid var(--color-border-default);
 }
 
-.markdown-body table td>:last-child {
+.markdown-body table td > :last-child {
     margin-bottom: 0;
 }
 
@@ -762,11 +782,11 @@
     background-color: transparent;
 }
 
-.markdown-body img[align=right] {
+.markdown-body img[align='right'] {
     padding-left: 20px;
 }
 
-.markdown-body img[align=left] {
+.markdown-body img[align='left'] {
     padding-right: 20px;
 }
 
@@ -781,7 +801,7 @@
     overflow: hidden;
 }
 
-.markdown-body span.frame>span {
+.markdown-body span.frame > span {
     display: block;
     float: left;
     width: auto;
@@ -809,7 +829,7 @@
     clear: both;
 }
 
-.markdown-body span.align-center>span {
+.markdown-body span.align-center > span {
     display: block;
     margin: 13px auto 0;
     overflow: hidden;
@@ -827,7 +847,7 @@
     clear: both;
 }
 
-.markdown-body span.align-right>span {
+.markdown-body span.align-right > span {
     display: block;
     margin: 13px 0 0;
     overflow: hidden;
@@ -857,7 +877,7 @@
     overflow: hidden;
 }
 
-.markdown-body span.float-right>span {
+.markdown-body span.float-right > span {
     display: block;
     margin: 13px auto 0;
     overflow: hidden;
@@ -866,7 +886,7 @@
 
 .markdown-body code,
 .markdown-body tt {
-    padding: .2em .4em;
+    padding: 0.2em 0.4em;
     margin: 0;
     font-size: 85%;
     white-space: break-spaces;
@@ -891,7 +911,7 @@
     font-size: 100%;
 }
 
-.markdown-body pre>code {
+.markdown-body pre > code {
     padding: 0;
     margin: 0;
     word-break: normal;
@@ -959,11 +979,11 @@
 }
 
 .markdown-body [data-footnote-ref]::before {
-    content: "[";
+    content: '[';
 }
 
 .markdown-body [data-footnote-ref]::after {
-    content: "]";
+    content: ']';
 }
 
 .markdown-body .footnotes {
@@ -993,7 +1013,7 @@
     bottom: -8px;
     left: -24px;
     pointer-events: none;
-    content: "";
+    content: '';
     border: 2px solid var(--color-accent-emphasis);
     border-radius: 6px;
 }
@@ -1129,7 +1149,7 @@
 .markdown-body g-emoji {
     display: inline-block;
     min-width: 1ch;
-    font-family: "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
     font-size: 1em;
     font-style: normal !important;
     font-weight: var(--base-text-weight-normal, 400);
@@ -1154,7 +1174,7 @@
     cursor: pointer;
 }
 
-.markdown-body .task-list-item+.task-list-item {
+.markdown-body .task-list-item + .task-list-item {
     margin-top: 4px;
 }
 
@@ -1163,12 +1183,12 @@
 }
 
 .markdown-body .task-list-item-checkbox {
-    margin: 0 .2em .25em -1.4em;
+    margin: 0 0.2em 0.25em -1.4em;
     vertical-align: middle;
 }
 
 .markdown-body .contains-task-list:dir(rtl) .task-list-item-checkbox {
-    margin: 0 -1.6em .25em .2em;
+    margin: 0 -1.6em 0.25em 0.2em;
 }
 
 .markdown-body .contains-task-list {
@@ -1200,14 +1220,14 @@
     padding: 0 1em;
     margin-bottom: 16px;
     color: inherit;
-    border-left: .25em solid var(--color-border-default);
+    border-left: 0.25em solid var(--color-border-default);
 }
 
-.markdown-body .markdown-alert>:first-child {
+.markdown-body .markdown-alert > :first-child {
     margin-top: 0;
 }
 
-.markdown-body .markdown-alert>:last-child {
+.markdown-body .markdown-alert > :last-child {
     margin-bottom: 0;
 }
 
